Add user and permission management features with Excel import support